/*
 * Copyright 2016-2022 Fraunhofer AISEC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 *           $$\                           $$\ $$\   $$\
 *           $$ |                          $$ |\__|  $$ |
 *  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
 * $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
 * $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
 * $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
 * \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
 *  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
 *
 * This file is part of Clouditor Community Edition.
 */
syntax = "proto3";

package clouditor;

import "api/evidence/evidence.proto";
import "google/api/annotations.proto";

option go_package = "clouditor.io/clouditor/api/evidence";

// Manages the storage of evidences
service EvidenceStore {
  // Stores an evidence to the evidence storage. Part of the public API, also
  // exposed as REST.
  rpc StoreEvidence(StoreEvidenceRequest) returns (StoreEvidenceResponse) {
    option (google.api.http) = {
      post : "/v1/evidence_store/evidence"
      body : "evidence"
      response_body : "status"
    };
  }

  // Stores a stream of evidences to the evidence storage and returns a response
  // stream. Part of the public API, not exposed as REST.
  rpc StoreEvidences(stream StoreEvidenceRequest)
      returns (stream StoreEvidenceResponse) {};

  // Returns all stored evidences. Part of the public API, also exposed as REST.
  rpc ListEvidences(ListEvidencesRequest) returns (ListEvidencesResponse) {
    option (google.api.http) = {
      get : "/v1/evidence_store/evidences"
    };
  }
}

message StoreEvidenceRequest { Evidence evidence = 1; }
message StoreEvidenceResponse {
  bool status = 1;
  string status_message = 2;
}

message ListEvidencesRequest {
  int32 page_size = 1;
  string page_token = 2;
  string order_by = 3;
  bool asc = 4;
}
message ListEvidencesResponse {
  repeated Evidence evidences = 1;
  string next_page_token = 2;
}
